--- a/package.json
+++ b/package.json
@@ -25,10 +25,14 @@
     "@fortawesome/free-brands-svg-icons": "^5.1.0",
     "@fortawesome/free-regular-svg-icons": "^5.1.0",
     "@fortawesome/free-solid-svg-icons": "^5.1.0",
+    "@types/jquery": "^3.3.4",
     "bootstrap": "^4.1.1",
     "core-js": "^2.5.4",
     "fast-deep-equal": "^2.0.1",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.3.1",
+    "jquery-match-height": "^0.7.2",
+    "popper.js": "^1.14.3",
     "roboto-fontface": "^0.9.0",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
