--- a/package.json
+++ b/package.json
@@ -26,10 +26,13 @@
     "@fortawesome/free-regular-svg-icons": "^5.1.0",
     "@fortawesome/free-solid-svg-icons": "^5.1.0",
     "@types/jquery": "^3.3.4",
+    "angular-highcharts": "^5.2.13",
     "bootstrap": "^4.1.1",
+    "chart.js": "^2.7.2",
     "core-js": "^2.5.4",
     "fast-deep-equal": "^2.0.1",
     "font-awesome": "^4.7.0",
+    "highcharts": "^6.1.1",
     "jquery": "^3.3.1",
     "jquery-match-height": "^0.7.2",
     "popper.js": "^1.14.3",
@@ -42,6 +45,8 @@
     "@angular/cli": "~6.0.8",
     "@angular/compiler-cli": "^6.0.3",
     "@angular/language-service": "^6.0.3",
+    "@types/chart.js": "^2.7.27",
+    "@types/highcharts": "^5.0.25",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
