--- a/src/prepros-6.config
+++ b/src/prepros-6.config
@@ -359,6 +359,14 @@
         "assets/Content/default/sass/helpers/_fontface.scss",
         "assets/Content/default/sass/helpers/_mixin_css3.scss"
       ]
+    },
+    {
+      "path": "assets/Content/default/sass/content/transaction.scss",
+      "imports": [
+        "assets/Content/default/sass/_variables.scss",
+        "assets/Content/default/sass/helpers/_fontface.scss",
+        "assets/Content/default/sass/helpers/_mixin_css3.scss"
+      ]
     }
   ],
   "projectView": {
