update post login responsive v1

--- a/src/prepros-6.config
+++ b/src/prepros-6.config
@@ -367,6 +367,18 @@
         "assets/Content/default/sass/helpers/_fontface.scss",
         "assets/Content/default/sass/helpers/_mixin_css3.scss"
       ]
+    },
+    {
+      "path": "app/transaction/transaction.component.scss",
+      "imports": [
+        "assets/Content/default/sass/_variables.scss"
+      ]
+    },
+    {
+      "path": "app/profile/profile.component.scss",
+      "imports": [
+        "assets/Content/default/sass/_variables.scss"
+      ]
     }
   ],
   "projectView": {
