--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.1.0",
     "@fortawesome/free-regular-svg-icons": "^5.1.0",
     "@fortawesome/free-solid-svg-icons": "^5.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^2.2.0",
     "@types/jquery": "^3.3.4",
     "angular-highcharts": "^5.2.13",
     "bootstrap": "^4.1.1",
