--- a/angular.json
+++ b/angular.json
@@ -27,8 +27,12 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/primeng/resources/themes/omega/theme.css",
+              "node_modules/primeng/resources/primeng.min.css",
+              "node_modules/primeicons/primeicons.css",
               "src/styles.css",
-              "./node_modules/font-awesome/css/font-awesome.css"          
+              "./node_modules/font-awesome/css/font-awesome.css"
+                     
 
             
             ],
@@ -37,6 +41,7 @@
               "./node_modules/popper.js/dist/umd/popper.min.js",
               "./node_modules/bootstrap/dist/js/bootstrap.min.js",
               "./node_modules/chart.js/dist/Chart.bundle.min.js"
+              
             ]
           },
           "configurations": {
