--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
     "@fortawesome/free-brands-svg-icons": "^5.1.0",
     "@fortawesome/free-regular-svg-icons": "^5.1.0",
     "@fortawesome/free-solid-svg-icons": "^5.1.0",
-    "@ng-bootstrap/ng-bootstrap": "^2.2.0",
-    "@types/jquery": "^3.3.4",
+    "@ng-bootstrap/ng-bootstrap": "^2.2.2",
+    "@ngx-translate/core": "^10.0.2",
+    "@ngx-translate/http-loader": "^3.0.1",
     "angular-highcharts": "^5.2.13",
     "bootstrap": "^4.1.1",
     "chart.js": "^2.7.2",
@@ -36,7 +37,10 @@
     "highcharts": "^6.1.1",
     "jquery": "^3.3.1",
     "jquery-match-height": "^0.7.2",
+    "ngx-bootstrap": "^3.0.1",
     "popper.js": "^1.14.3",
+    "primeicons": "^1.0.0-beta.10",
+    "primeng": "^6.1.0",
     "roboto-fontface": "^0.9.0",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
@@ -50,6 +54,7 @@
     "@types/highcharts": "^5.0.25",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jquery": "^3.3.5",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
     "jasmine-core": "~2.99.1",
