update second phase v1

--- a/src/prepros-6.config
+++ b/src/prepros-6.config
@@ -117,6 +117,12 @@
         "assets/Content/default/sass/bootstrap/mixins/_grid-framework.scss",
         "assets/Content/default/sass/bootstrap/mixins/_grid.scss"
       ]
+    },
+    {
+      "path": "app/login/login.component.scss",
+      "imports": [
+        "assets/Content/default/sass/_variables.scss"
+      ]
     }
   ],
   "projectView": {
