--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "highcharts": "^6.1.1",
     "jquery": "^3.3.1",
     "jquery-match-height": "^0.7.2",
-    "ngx-bootstrap": "^3.0.1",
+    "ngx-captcha": "^4.0.0",
     "popper.js": "^1.14.3",
     "primeicons": "^1.0.0-beta.10",
     "primeng": "^6.1.0",
