--- a/package.json
+++ b/package.json
@@ -32,16 +32,19 @@
     "angular-in-memory-web-api": "^0.5.4",
     "angular-user-idle": "^2.0.0",
     "bootstrap": "^4.1.1",
+    "bootstrap-select": "^1.13.3",
     "chart.js": "^2.7.2",
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.5.4",
     "fast-deep-equal": "^2.0.1",
+    "file-saver": "^2.0.0-rc.4",
     "font-awesome": "^4.7.0",
     "highcharts": "^6.1.4",
     "jquery": "^3.3.1",
     "jquery-match-height": "^0.7.2",
     "ngx-captcha": "^4.0.0",
     "ngx-malihu-scrollbar": "^1.3.2",
+    "ngx-pagination": "^3.2.1",
     "ngx-toastr": "^9.0.2",
     "popper.js": "^1.14.3",
     "primeicons": "^1.0.0-beta.10",
