--- a/src/prepros-6.config
+++ b/src/prepros-6.config
@@ -139,6 +139,24 @@
         "assets/Content/default/sass/helpers/_fontface.scss",
         "assets/Content/default/sass/helpers/_mixin_css3.scss"
       ]
+    },
+    {
+      "path": "app/transaction/sell/sell.component.scss",
+      "imports": [
+        "assets/Content/default/sass/_variables.scss"
+      ]
+    },
+    {
+      "path": "app/transaction/purchase/purchase.component.scss",
+      "imports": [
+        "assets/Content/default/sass/_variables.scss"
+      ]
+    },
+    {
+      "path": "app/transaction/exchange/exchange.component.scss",
+      "imports": [
+        "assets/Content/default/sass/_variables.scss"
+      ]
     }
   ],
   "projectView": {
