--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "@ng-bootstrap/ng-bootstrap": "^2.2.2",
     "@ngx-translate/core": "^10.0.2",
     "@ngx-translate/http-loader": "^3.0.1",
+    "angular-dynamic-number": "^2.5.1",
     "angular-highcharts": "^6.2.6",
     "angular-in-memory-web-api": "^0.5.4",
     "angular-user-idle": "^2.0.0",
+    "angular2-text-mask": "^9.0.0",
     "bootstrap": "^4.1.1",
     "bootstrap-select": "^1.13.3",
     "chart.js": "^2.7.2",
@@ -42,8 +44,10 @@
     "highcharts": "^6.1.4",
     "jquery": "^3.3.1",
     "jquery-match-height": "^0.7.2",
+    "ng2-currency-mask": "^5.3.1",
     "ngx-captcha": "^4.0.0",
     "ngx-malihu-scrollbar": "^1.3.2",
+    "ngx-mask": "^6.5.18",
     "ngx-pagination": "^3.2.1",
     "ngx-toastr": "^9.0.2",
     "popper.js": "^1.14.3",
@@ -51,6 +55,7 @@
     "primeng": "^6.1.0",
     "roboto-fontface": "^0.9.0",
     "rxjs": "^6.0.0",
+    "url-search-params-polyfill": "^5.0.0",
     "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.26"
   },
